--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: lukasavage
  * @Date: 2022-01-19 21:18:38
  * @LastEditors: lukasavage
- * @LastEditTime: 2022-01-19 22:16:51
+ * @LastEditTime: 2022-01-20 09:50:04
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -24,7 +24,7 @@
             el: '#app',
             data() {
                 return {
-                    aaa: 111,
+                    aaa: 111
                 }
             },
         })
