feat: 实现vm代理属性以及部分函数的封装

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: lukasavage
  * @Date: 2022-01-19 21:18:38
  * @LastEditors: lukasavage
- * @LastEditTime: 2022-01-20 21:38:30
+ * @LastEditTime: 2022-01-23 10:43:07
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -29,7 +29,7 @@
             },
         })
         // vm._data.a = 1
-        console.log(vm._data);
+        console.log(vm.a);
     </script>
 </body>
 
