feat: 实现render函数生成

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: lukasavage
  * @Date: 2022-01-19 21:18:38
  * @LastEditors: lukasavage
- * @LastEditTime: 2022-01-23 16:32:05
+ * @LastEditTime: 2022-01-25 00:13:33
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -21,7 +21,7 @@
         我是文本
         <div id="my">
             hello,
-            <span>{{ str }}</span>
+            <span>{{ str }} {{str}} ewer</span>
         </div>
     </div>
     <script src="dist/umd/vue.js"></script>
