--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: lukasavage
  * @Date: 2022-01-19 21:18:38
  * @LastEditors: lukasavage
- * @LastEditTime: 2022-02-10 22:52:39
+ * @LastEditTime: 2022-02-12 11:40:59
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -42,6 +42,7 @@
             // el: '#app',
             data() {
                 return {
+                    hehe: 123,
                     str: 'world'
                 }
             },
@@ -51,14 +52,20 @@
         })
         vm.$mount('#app')
         // vm._data.a = 1
-        vm.str = 'fuck you!!!'
+        setTimeout(() => {
+            vm.hehe = 1
+            vm.str = 'fuck you!!!'
+            vm.$nextTick(() => { })
+        }, 1000);
+
+
         // setTimeout(() => {
         //     vm.str = 'fuck you!!!'
         //     // vm._update(vm._render());
         // }, 1000);
-        vm.$nextTick(()=>{
-            console.log(1111);
-        })
+        // vm.$nextTick(()=>{
+        //     console.log(1111);
+        // })
     </script>
 </body>
 
